MPFR.pod - document Rmpfr_tanu, Rmpfr_sinpi, Rmpfr_cospi, Rmpfr_tanpi (new in 4.2.0)

--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1227,21 +1227,26 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     with their corresponding precisions.  Return 0 if both
     results are exact.
 
-   $si = Rmpfr_sinu($rop, $op, $ui, $rnd); # mpfr-4.2.0 and later
-    Set $rop to the sine of $op multiplied by 2 * Pi and divided
-    by $ui.
-    Thus for $ui equal to 360, we get $rop = sin($op degrees).
-    When $op multiplied by 2 and divided by $ui is an integer,
-    the result is zero with the same sign as $op, following
-    IEEE 754-2019 (sinPi), so that the function is odd.
+   $si = Rmpfr_cosu($rop, $op, $ui, $rnd); # mpfr-4.2.0 and later only
+   $si = Rmpfr_sinu($rop, $op, $ui, $rnd); # mpfr-4.2.0 and later only
+   $si = Rmpfr_tanu($rop, $op, $ui, $rnd); # mpfr-4.2.0 and later only
+    Set $rop to the cosine (resp. sine and tangent) of $op multiplied by
+    2*Pi and divided by $ui.  For example, if $ui equals 360, one gets
+    the cosine (resp. sine and tangent) for $op in degrees.  For
+    'Rmpfr_cosu', when $op multiplied by 2 and divided by $ui is a
+    half-integer, the result is +0, following IEEE 754-2019 (cosPi), so
+    that the function is even.  For 'Rmpfr_sinu', when $op multiplied by
+    2 and divided by $ui is an integer, the result is zero with the same
+    sign as $op, following IEEE 754-2019 (sinPi), so that the function
+    is odd.  Similarly, the function 'Rmpfr_tanu' follows IEEE 754-2019
+    (tanPi).
 
-   $si = Rmpfr_cosu($rop, $op, $ui, $rnd); # mpfr-4.2.0 and later
-    Set $rop to the cosine of $op multiplied by 2 * Pi and divided
-    by $ui.
-    Thus for $ui equal to 360, we get $rop = cos($op degrees).
-    When $op multiplied by 2 and divided by $ui is a half-integer,
-    the result is +0, following IEEE 754-2019 (cosPi), so that the
-    function is even.
+   $si = Rmpfr_cospi($rop, $op, $rnd); # mpfr-4.2.0 and later only
+   $si = Rmpfr_sinpi($rop, $op, $rnd); # mpfr-4.2.0 and later only
+   $si = Rmpfr_tanpi($rop, $op, $rnd); # mpfr-4.2.0 and later only
+    Set $rop to the cosine (resp. sine and tangent) of $op multiplied by
+    Pi.  See the description of 'Rmpfr_sinu', 'Rmpfr_cosu' and
+    'Rmpfr_tanu' for special values.
 
    $si = Rmpfr_sinh_cosh($rop1, $rop2, $op, $rnd);
     Set simultaneously $rop1 to the hyperbolic sine of $op and
