--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
+4.17
+
 4.16
- - Workaround mpfr library assertion failure in decimalize() that occurs when
-   precision is 1 && mpfr library version is 4.0.1.
+ - Workaround mpfr library assertion failure in decimalize() could occur when
+   precision is 1 && mpfr library version is less than 4.0.2.
 
 4.15
  - Make some changes in test files relating to bareword filehandles and indirect
