--- a/MPFR.pod
+++ b/MPFR.pod
@@ -2387,7 +2387,6 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     An example, when $Config{ivsize} == 8, default precision <= 63,
     default rounding mode is either MPFR_RNDN, MPFR_RNDU or MPFR_RNDA :
 
-      my $i = 18446744073709551615;
       my $f = Math::MPFR->new(2 ** 64); # 0x1p+63
       my $i = 18446744073709551615;     # 1 less than 2 ** 64
       print ($f <=>  $i ); # prints 1
@@ -2399,7 +2398,7 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
 
       print ($f <=> Math::GMPz->new("$i")); # prints 1
 
-    We test this in t/anomaly.t in the test suite.
+    See t/anomaly.t in the test suite for further examples.
 
    #####################
 
