--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,9 @@
  - Add q_add_fr, q_sub_fr, q_mul_fr, q_div_fr and fr_cmp_q_rounded functions.
  - Add Rmpfr_cmp_IV, Rmpfr_cmp_UV, Rmpfr_cmp_sj and Rmpfr_cmp_uj (though the MPFR
    library currently contains neither mpfr_cmp_sj nor mpfr_cmp_uj).
+ - Fix Rmpfr_get_str_ndigits and Rmpfr_get_str_ndigits_alt so that they don't change
+   the inexflag from unset to set. (This was fixed for mpfr_get_str_ndigits in
+   mpfr versions > 4.1.0.)
 
 4.16
  - Workaround mpfr library assertion failure in decimalize() could occur when
