MPFR.pod - completion of the extending of decimalize

--- a/MPFR.pod
+++ b/MPFR.pod
@@ -1884,14 +1884,17 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
     If $str numifies to an IV, return that IV.
     Else return the NV that is returned by atonv($str).
 
+
    $ret = decimalize($op [, $anything]); # 2nd (optional) arg
                                          # can be any scalar.
     If no second argument is provided, return an exact base 10
-    representation of the value held in $op.
-    Else return the no. of decimal digits (not counting leading zeros)
-    contained in the significand of that "exact base 10 representation",
-    as calculated by decimalize(). (This value can be one greater than
-    the actual number of those significand digits.)
+    string representation of the value held in $op.
+    Else, instead return the number of decimal digits (not counting
+    leading zeros) contained in the significand of that "exact base 10
+    representation", as estmated by decimalize(). This value could be
+    one greater than the actual number of those significand digits.
+    If a second arg is supplied && $op is Inf or NaN or Zero, then
+    the returned value will be zero.
 
    $bool = check_exact_decimal($str, $op);
     Can be used to verify the string returned by decimalize().
